[package]
name = "ruSSH"
version = "0.1.91"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }

dirs = "5.0.1"
thiserror = "1.0.53"
argh = "0.1"
ansi_term = "0.12.1"
toml = "0.4.2"
